[package]
name = "phi-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
candle-core = {features = ["cuda"], version = "0.9.1"}
candle-nn = {features = ["cuda"], version = "0.9.1"}
candle-transformers = {features = ["cuda"], version = "0.9.1"}
hf-hub = "0.4.3"
tokenizers = "0.21.4"
serde_json = "1.0.142"
itertools = "0.14.0"