[package]
name = "ggquill"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggmath = { path = "../ggmath" }
anyhow = "1.0.98"
candle-core = {features = ["cuda"], version = "0.10.2"}
candle-nn = {features = ["cuda"], version = "0.10.2"}
candle-transformers = {features = ["cuda"], version = "0.10.2"}
hf-hub = "0.5.0"
tokenizers = "0.22.2"
serde_json = "1.0.149"
itertools = "0.14.0"